# yfinance_crawling

./: README.md  load_calendar_data.py  process_calendar_data.py  pyproject.toml  requirements.txt  scrapy.cfg
crawler_yf_event/: analyze_events.py  collect_stock_data.py  event_analysis.xlsx  event_stock_analysis.py  run_crawler.py  scrapy.cfg  stock_analysis.py  yf_calendar_events.json
crawler_yf_event/crawler_yf_event/: items.py  middlewares.py  pipelines.py  settings.py
crawler_yf_event/db/: market_caps.csv  stock_prices_ACN.csv  stock_prices_ADBE.csv  stock_prices_AVGO.csv  stock_prices_AZO.csv  stock_prices_COST.csv  stock_prices_CTAS.csv  stock_prices_MU.csv  stock_prices_NKE.csv  stock_prices_ORCL.csv  stock_prices_PGR.csv
examples/: 2025-03-10_earning.csv  example.ipynb  load_calendar_data.py
output/: calendar_data_20250310_192730_earnings.json  calendar_data_20250310_192730_economic.json  calendar_data_20250310_192730_ipo.json  calendar_data_20250310_192730_splits.json  calendar_data_20250310_192738_earnings.json  calendar_data_20250310_192738_economic.json  calendar_data_20250310_192738_ipo.json  calendar_data_20250310_192738_splits.json  yahoo_finance_calendar_2025-03-10T10-27-30+00-00.json  yahoo_finance_calendar_2025-03-10T10-27-37+00-00.json
yfinance_calendar/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
yfinance_calendar/config/: class_selectors.yaml  selectors.yaml
yfinance_calendar/spiders/: calendar_spider.py
yfinance_calendar/utils/: __init__.py  config_loader.py  data_loader.py  data_processor.py
(+1 files in other folders)
